--- a/index.html
+++ b/index.html
@@ -123,5 +123,6 @@
 </head>
   <body class="bg-gray-50 text-slate-800 antialiased overflow-hidden h-screen w-screen">
     <div id="root"></div>
+    <script type="module" src="/index.tsx"></script>
   </body>
 </html>
